--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# Cordova platforms and plugins
+plugins
+platforms
+
+# Webpack bundle
+www/bundle.js
