--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "picture-tour",
   "version": "1.0.0",
   "description": "Picture Tour Example React.js PhoneGap App",
-  "main": "index.js",
+  "main": "server/index.js",
+  "repository": "https://github.com/JedWatson/picture-tour-app.git",
   "dependencies": {
-    "babel-loader": "^6.2.1",
     "babel-core": "^6.4.5",
-    "babel-preset-react": "^6.3.13",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
     "react": "^0.14.6",
-    "webpack-dev-server": "^1.14.1",
     "react-dom": "^0.14.6",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-preset-react-hmre": "^1.0.1",
@@ -21,11 +24,12 @@
     "webpack-merge": "^0.7.3"
   },
   "scripts": {
-	"android": "cordova run android",
+    "android": "cordova run android",
     "build": "webpack",
-	"ios": "cordova run ios",
-	"prepare": "node config && webpack && cordova prepare",
-	"compile": "node config && webpack && cordova build",
+    "ios": "cordova run ios",
+    "prepare": "node config && webpack && cordova prepare",
+    "compile": "node config && webpack && cordova build",
+    "server": "node server",
     "start": "node config && webpack-dev-server",
     "test": "echo \"No tests (yet!) -- submit a PR?\" && exit 0"
   },
