--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "classnames": "^2.2.3",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "store-prototype": "^1.1.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
