--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "classnames": "^2.2.3",
+    "cors": "^2.7.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "store-prototype": "^1.1.1",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "xhr": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-react-hmre": "^1.0.1",
