--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "react": "^0.14.6",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.6",
+    "react-tappable": "^0.8.0",
     "store-prototype": "^1.1.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1",
