--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "picture-tour",
+  "name": "phonegap-template-react-hot-loader",
   "version": "1.0.0",
-  "description": "Picture Tour Example React.js PhoneGap App",
-  "main": "server/index.js",
-  "repository": "https://github.com/JedWatson/picture-tour-app.git",
+  "description": "Template Example for using React, ES2015, Webpack, and hot loading in a PhoneGap App",
+  "main": "src/index.js",
+  "repository": "https://github.com/PhoneGap/phonegap-template-react-hot-loader.git",
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "classnames": "^2.2.3",
-    "cors": "^2.7.1",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.6",
     "react-tappable": "^0.8.0",
-    "store-prototype": "^1.1.1",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
-    "xhr": "^2.2.0"
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-preset-react-hmre": "^1.0.1",
@@ -31,14 +26,18 @@
   },
   "scripts": {
     "android": "cordova run android",
-    "build": "webpack",
     "ios": "cordova run ios",
     "prepare": "node config && webpack && cordova prepare",
-    "compile": "node config && webpack && cordova build",
-    "server": "node server",
+    "build": "node config && webpack && cordova build",
     "start": "node config && webpack-dev-server",
     "test": "echo \"No tests (yet!) -- submit a PR?\" && exit 0"
   },
   "author": "Jed Watson",
+  "contributors": [
+    {
+      "name": "Tommy-Carlos Williams",
+      "email": "tommy@devgeeks.org"
+    }
+ ],
   "license": "MIT"
 }
