Small documentation update (added PhoneGap)
Also added Jed as a collaborator, not just as the author

--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     {
       "name": "Tommy-Carlos Williams",
       "email": "tommy@devgeeks.org"
+    },
+    {
+      "name": "Jed Watson",
+      "email": "jed.watson@me.com"
     }
   ],
   "license": "MIT"
