--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+	"extends": "airbnb",
 	"ecmaFeatures": {
 		"jsx": true,
 		"modules": true,
@@ -12,6 +13,7 @@
 		"quotes": [
 			2,
 			"single",
-		]
+		],
+		"react/prefer-es6-class": 0
 	}
 }
