--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "babel-preset-react-hmre": "^1.0.1",
     "css-loader": "^0.23.1",
     "elementtree": "^0.1.6",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1",
     "replace": "^0.3.0",
     "style-loader": "^0.13.0",
     "webpack-merge": "^0.7.3"
   },
   "scripts": {
+    "pretest": "eslint src/**/*.js",
     "android": "cordova run android",
     "ios": "cordova run ios",
     "prepare": "node config && webpack && cordova prepare",
