--- a/template_src/package.json
+++ b/template_src/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "phonegap-template-react-hot-loader",
-  "version": "1.1.1",
-  "description": "PhoneGap Template using React, ES2015, Webpack, and hot module reloading",
+  "name": "my_app",
+  "version": "1.0.0",
   "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/phonegap/phonegap-template-react-hot-loader.git"
-  },
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
@@ -36,26 +31,7 @@
     "start": "node config && HOST=0.0.0.0 webpack-dev-server",
     "test": "echo \"No tests (yet!) -- submit a PR?\" && exit 0"
   },
-  "keywords": [
-    "ecosystem:phonegap",
-    "ecosystem:cordova",
-    "cordova:template",
-    "phonegap:template"
-  ],
-  "bugs": {
-    "url": "https://github.com/phonegap/phonegap-template-react-hot-loader/issues"
-  },
-  "homepage": "https://github.com/phonegap/phonegap-template-react-hot-loader#readme",
-  "author": "Jed Watson",
-  "contributors": [
-    {
-      "name": "Tommy-Carlos Williams",
-      "email": "tommy@devgeeks.org"
-    },
-    {
-      "name": "Jed Watson",
-      "email": "jed.watson@me.com"
-    }
-  ],
-  "license": "MIT"
+  "keywords": [],
+  "author": "none specified",
+  "license": "none specified"
 }
