--- a/template/.babelrc
+++ b/template/.babelrc
@@ -1,13 +1,13 @@
 {
-	"presets": [
-		"es2015",
-		"react"
-	],
-	"env": {
-		"development": {
-			"presets": [
-				"react-hmre"
-			]
-		}
-	}
+  "presets": [
+    "react",
+    "es2015"
+  ],
+  "env": {
+    "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
