--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phonegap-template-react-hot-loader",
-  "version": "1.3.1",
-  "description": "PhoneGap Template using React, ES2015, Webpack, and hot module reloading",
+  "version": "1.3.2",
+  "description": "PhoneGap Template using React, ES2017, Webpack, and hot module reloading",
   "main": "index.js",
   "keywords": [
     "ecosystem:phonegap",
@@ -22,6 +22,10 @@
     {
       "name": "Jed Watson",
       "email": "jed.watson@me.com"
+    },
+    {
+      "name": "Matheus B.",
+      "email": "mattbmoller@gmail.com"
     }
   ],
   "license": "MIT"
